Fix post tag wrapping bug for posts with many tags
This was reported to be breaking the layout if there were too many tags on a post.

--- a/web/themes/custom/union_marketing/scss/components/_fields.scss
+++ b/web/themes/custom/union_marketing/scss/components/_fields.scss
@@ -1,5 +1,6 @@
 .field--label-inline {
   display: flex;
+  flex-wrap: wrap;
   gap: .5em;
 }
 
